--- a/frontend/src/components/ParticlesAnimation.css
+++ b/frontend/src/components/ParticlesAnimation.css
@@ -11,6 +11,8 @@
   overflow: hidden;
   padding: 0 20px;
   min-height: 200px;
+  width: 100%;
+  max-width: 100vw;
   /* Performance optimizations */
   will-change: transform;
   backface-visibility: hidden;
